# C-Game

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/: cube.h  main.c  renderer.c  renderer.h
